# python-erc7730

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  catalog-info.yaml  convert_all.sh  pyproject.toml
.github/: actionlint.yml  dependabot.yml  labeler.yml  release-drafter.yml  release.yaml
.github/actions/pdm/: action.yml
.github/workflows/: automerge.yml  ci.yml  demo.yml  lint.yml  release-drafter.yml  release.yml  update.yml  update_dependencies.yml  update_submodules.yml
demo-registry/1inch/: calldata-permit2.json
demo-registry/aave/: calldata-lpv2.json
demo-registry/lido/: calldata-stETH.json  calldata-wstETH.json
demo-registry/makerdao/: eip712-permit-DAI.json
demo-registry/makerdao/tests/eip712-permit-DAI/: permit-DAI-sample1.json
demo-registry/paraswap/: calldata-AugustusSwapper.json
demo-registry/tether/: calldata-usdt.json
demo-registry/uniswap/: calldata-UniswapV3Router02.json  eip712-permit2.json
docs/: conf.py  erc-7730.schema.json  index.md
docs/pages/: usage_cli.md  usage_library.md
docs/static/: custom.css
prompts/: system_prompt.txt  user_prompt_template.txt
src/eip-712-erc-7730/model/: context.py  display.py  erc7730_descriptor.py  metadata.py  types.py
src/erc7730/: __init__.py  main.py
src/erc7730/classifier/: __init__.py  abi_classifier.py  eip712_classifier.py
src/erc7730/common/: abi.py  client.py  erc7730.py  erc7730_path.py  output.py  pydantic.py
src/erc7730/common/client/: etherscan.py
src/erc7730/convert/: __init__.py  convert.py  convert_eip712_to_erc7730.py  convert_erc7730_input_to_resolved.py  convert_erc7730_to_eip712.py
src/erc7730/convert/ledger/eip712/: convert_eip712_to_erc7730.py  convert_erc7730_to_eip712.py
src/erc7730/convert/resolved/: convert_erc7730_input_to_resolved.py
src/erc7730/display_format_checker/: __init__.py  display_format_checker.py
src/erc7730/generate/: generate.py  llm_inference.py
src/erc7730/lint/: __init__.py  lint.py  lint_base.py  lint_transaction_type_classifier.py  lint_validate_abi.py  lint_validate_display_fields.py
src/erc7730/lint/classifier/: __init__.py  abi_classifier.py
src/erc7730/lint/common/: paths.py
src/erc7730/linter/: __init__.py  lint.py  linter_base.py  linter_check_impacts.py  linter_demo.py  linter_transaction_type_classifier_ai.py  linter_validate_abi.py  linter_validate_display_fields.py  linter_validate_structure.py
src/erc7730/linter/classifier/: __init__.py  abi_classifier.py  eip712_classifier.py
src/erc7730/linter/common/: display_format_checker.py  paths.py
src/erc7730/mapper/: mapper.py
src/erc7730/model/: __init__.py  abi.py  base.py  context.py  descriptor.py  display.py  erc7730_descriptor.py  metadata.py  path.py  types.py  unions.py  utils.py
src/erc7730/model/input/: __init__.py  context.py  descriptor.py  display.py
src/erc7730/model/resolved/: __init__.py  context.py  descriptor.py  display.py
src/erc7730/prompts/: user_prompt_template.txt
tests/: .coverage.xml  .tests.xml  assertions.py  files.py  schemas.py  test_main.py
tests/common/: test_abi.py
tests/convert/: test_convert_eip712_round_trip.py  test_convert_eip712_to_erc7730.py  test_convert_erc7730_to_eip712.py
tests/convert/resolved/data/: minimal_contract_resolved.json
tests/model/: test_model_serialization.py
tests/resources/: eip712.schema.json  eip712_wrong_path.json
tests/src/erc7730/: test_datamodel.py  test_mapper.py
tests/src/erc7730/client/: test_etherscan_client.py
tests/src/erc7730/common/: test_datamodel.py
tests/src/erc7730/common/client/: test_etherscan_client.py
tests/src/erc7730/mapper/: test_mapper.py
