[project]
name = "erc7730"
description = "Translation from erc-7730 file to eip-712 descriptor"
authors = [{ name = "Ledger" }]
maintainers = [{ name = "Ledger" }]
license = { text = "LicenseRef-Proprietary" }
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.12, <3.13"
classifiers = [
    "Development Status :: 1 - Planning Copy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
]

[project.urls]
Homepage = "https://ledgerhq.github.io/python-erc7730"
Documentation = "https://ledgerhq.github.io/python-erc7730"
Repository = "https://github.com/LedgerHQ/python-erc7730"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
eip712 = "erc7730.main:app"

[tool.pdm.scripts]
lint.help = "Run all linters/formatters (automatically run by pre-commit)"
lint.shell = "pre-commit run --all-files"
test.help = "Run unit/integration tests suite"
test.shell = "pytest tests"
docs.help = "Build documentation (output is at docs/build/index.html)"
docs.shell = "sphinx-build --fail-on-warning docs docs/build"
profile.help = "Run the cal command with profiling (report is at outputs/profiling.html)"
profile.shell = "pyinstrument --renderer html --outfile outputs/profiling.html --from-path cal"
all.help = "Run lint+test+docs"
all.shell = { composite = ["lint", "test", "docs"] }

[tool.pdm]
plugins = ["sync-pre-commit-lock"]

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=73.0.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist[psutil]>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-sugar>=1.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-depends>=1.0.1",
    "pytest-insta>=0.3.0",
    "pytest-jira>=0.3.21",
    "pytest-pycharm>=0.7.0",
    "pytest-faker>=2.0.0",
    "pytest-unordered>=0.6.1",
    "pytest-raises>=0.11",
    "pytest-datadir-ng>=1.1.1",
    "sphinx>=7.3.7",
    "sphinxcontrib-typer>=0.5.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxawesome-theme>=5.2.0",
    "sphinx-github-style>=1.2.2",
    "sphinx-design>=0.6.1",
    "sphinx-issues>=4.1.0",
    "myst-parser[linkify]>=4.0.0",
    "faker>=28.0.0",
    "pyinstrument>=4.7.2",
    "py-spy>=0.3.14",
    "ruff>=0.6.3",
    "ruff-lsp>=0.0.55",
]

[tool.pdm.version]
source = "scm"
write_to = "eip-712-erc-7730/VERSION"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-p",
    "no:web3",
    "-Werror",
    "-n=0",
    "--dist=loadscope",
    "--basetemp=tmp",
    "--junitxml=tests/.tests.xml",
    "--cov=src",
    "--cov-report=xml:tests/.coverage.xml",
    "--cov-report=term",
    "--cov-branch",
    "--benchmark-disable",
]

[tool.coverage.paths]
source = ["src/eip-712-erc-7730"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.codespell]
ignore-words = ".codespellignore"
skip = "inputs/*,outputs/*,pdm.lock"